fix nav z-index

--- a/css/file.css
+++ b/css/file.css
@@ -99,7 +99,7 @@
   /*=== Bar Icon ===*/
 }
 #navbar.navbar-sticky {
-  z-index: 999999;
+  z-index: 999;
   height: 50px;
   box-shadow: 0px 0px 15px 0px #3c3c3c;
   background-color: #fff;
@@ -650,7 +650,7 @@ i {
   -o-transition: all 0.3s ease-in-out;
   -ms-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-  z-index: 999;
+  z-index: 9;
 }
 #works .work-card .work-img {
   position: absolute;
