--- a/css/sass/layout/_works.scss
+++ b/css/sass/layout/_works.scss
@@ -18,7 +18,7 @@
             border: 7px solid #2a8e82;
             opacity:0;
             @include transition( 0.3s );
-            z-index: 999;
+            z-index: 9;
         }
         .work-img{
             position: absolute;
